<resources>
    <string name="app_name">FridgeWatch</string>
    
    <!-- Dashboard Strings -->
    <string name="dashboard_title">Dashboard</string>
    <string name="fridgewatch_brand">FRIDGEWATCH</string>
    <string name="status_offline">OFFLINE</string>
    <string name="status_online">ONLINE</string>
    <string name="timer_label">Timer: 00:02:00</string>
    <string name="door_status_closed">CLOSED</string>
    <string name="door_status_open">OPEN</string>
    <string name="notification_button">Notification</string>
    <string name="date_time_header">Date | Time</string>
    <string name="status_header">Status</string>
    
    <!-- Sample Event Data -->
    <string name="event_1">22-09-25 : 22:09</string>
    <string name="event_2">22-09-25 : 22:08</string>
    <string name="event_3">22-09-25 : 19:22</string>
    <string name="event_4">22-09-25 : 19:20</string>
    <string name="status_closed">Closed</string>
    <string name="status_open">Open</string>
</resources>